<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="imc_peso">Peso (kg)</string>
    <string name="imc_altura">Altura (mts)</string>
    <string name="imc_descripcion">Ques es IMC??</string>
    <string name="imc_resultado">IMC</string>
    <string name="imc_calcular">Calcular</string>
    <string name="imc_nombre_persona">Nombre</string>
    <string name="imc_limpiar">Limpiar</string>
    <string name="imc_opcion_foto_tomar">Tomar Foto</string>
    <string name="imc_opcion_foto_seleccionar_galeria">Elegir de la Galeria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imc_agregar">Adicionar</string>
    <string name="imc_imc">IMC</string>
    <string name="imc_imc_respuesta">El IMC es...</string>
    <string name="navigation_item_calculo">Calculo IMC</string>
    <string name="navigation_item_descripcion_imc">IMC Descripción</string>
    <string name="navigation_item_share">Compartir</string>
    <string name="navigation_otros">Otros</string>
    <string name="navigation_item_acerca">Acerca de</string>
    <string name="icm_desarrollador_android">Desarrollador Android</string>
    <string name="icm_desarrollador_android_email">juan.gomez01@gmail.com</string>
    <string name="imc_compartir">Compartir</string>
</resources>
