<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#FF5722">

            <EditText
                android:id="@+id/txtNombrePersona"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/imc_nombre_persona"
                android:inputType="textAutoComplete" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#FF5722">

            <EditText
                android:id="@+id/txtPeso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/imc_peso"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#FF5722">

            <EditText
                android:id="@+id/txtAltura"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/imc_altura"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/imc_imc"
                android:textColor="@color/colorAccent"
                android:id="@+id/lblIMC"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtCalculoIMC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:hint="@string/imc_imc_respuesta"
                android:textColor="@color/grisOscuro"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/lblIMC"
                android:textStyle="bold|italic" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCalcular"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/imc_calcular" />

        <Button
            android:id="@+id/btnLimpiar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/btnCalcular"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/imc_limpiar" />

    </RelativeLayout>

</LinearLayout>