<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Views.IMCCalculoActivity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imc_peso" />

                <EditText
                    android:id="@+id/txtPeso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imc_altura" />

                <EditText
                    android:id="@+id/txtAltura"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:paddingLeft="0dp"
                    android:text="@string/imc_resultado" />

                <TextView
                    android:id="@+id/lblResultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imc_calcular" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ListView
                        android:id="@+id/lvimcs"
                        android:layout_width="match_parent"
                        android:layout_height="250dp">

                    </ListView>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <Button
            android:id="@+id/btnDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/imc_descripcion" />

    </FrameLayout>

</RelativeLayout>
